// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DesktopLink should be rendered correctly 1`] = `
<DocumentFragment>
  <a
    class="ml-4 px-3 py-2 text-sm font-medium leading-5 text-ideaOrange border-b-2 border-transparent hover:border-ideaOrange"
    href="/no-active"
  >
    Profile
  </a>
</DocumentFragment>
`;

exports[`DesktopLink should be rendered correctly when current is enabled 1`] = `
<DocumentFragment>
  <span
    class="ml-4 px-3 py-2 text-sm font-medium leading-5 text-ideaOrange border-b-2 border-ideaOrange"
  >
    Profile
  </span>
</DocumentFragment>
`;
